# Cpp_Empty_Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  unix_debug.sh  unix_release.sh  win.bat
Docs/: how_to_handle_visual_studio.md
jsons/: empty.txt
src/_pch_/: pch.h
src/classA/: A.cpp  A.h
src/debug/: innDebug.cpp  innDebug.h
src/main/: main.cpp
src/sys/debug/: innDebug.cpp  innDebug.h
src/sys/main/: main.cpp
sysconfig/: SysConfig.h.in
